--- a/examples/webgl_lights_spotlight.html
+++ b/examples/webgl_lights_spotlight.html
@@ -24,6 +24,11 @@
 			}
 		</script>
 
+		<video id="video" loop crossOrigin="anonymous" webkit-playsinline style="display:none">
+			<source src="textures/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>
+			<source src="textures/sintel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+		</video>
+
 		<script type="module">
 
 			import * as THREE from 'three';
@@ -35,6 +40,8 @@
 			let renderer, scene, camera;
 
 			let spotLight, lightHelper, shadowCameraHelper;
+
+			let textureUrls, textures;
 
 			let gui;
 
@@ -63,6 +70,23 @@
 
 				const ambient = new THREE.AmbientLight( 0xffffff, 0.1 );
 				scene.add( ambient );
+
+				const textureLoader = new THREE.TextureLoader();
+				textureUrls = [ 'none', 'sintel (video)', 'uv_grid_opengl.jpg', 'sprite2.png', 'colors.png' ];
+				textures = { none: null };
+
+				const video = document.getElementById( 'video' );
+				textures[textureUrls[1]] = new THREE.VideoTexture( video );
+				textures[textureUrls[1]].minFilter = THREE.LinearFilter;
+				textures[textureUrls[1]].magFilter = THREE.LinearFilter;
+
+				for ( let i = 2; i < textureUrls.length; ++i ) {
+
+					textures[textureUrls[i]] = textureLoader.load( 'textures/' + textureUrls[i] );
+					textures[textureUrls[i]].minFilter = THREE.LinearFilter;
+					textures[textureUrls[i]].magFilter = THREE.LinearFilter;
+
+				}
 
 				spotLight = new THREE.SpotLight( 0xffffff, 1 );
 				spotLight.position.set( 15, 40, 35 );
@@ -144,7 +168,8 @@
 					angle: spotLight.angle,
 					penumbra: spotLight.penumbra,
 					decay: spotLight.decay,
-					focus: spotLight.shadow.focus
+					focus: spotLight.shadow.focus,
+					map: 'none'
 				};
 
 				gui.addColor( params, 'light color' ).onChange( function ( val ) {
@@ -197,6 +222,15 @@
 
 				} );
 
+				gui.add( params, 'map', textureUrls ).onChange( function ( val ) {
+
+					if (spotLight.map && spotLight.map.isVideoTexture) video.pause();
+					spotLight.map = textures[val];
+					if (spotLight.map && spotLight.map.isVideoTexture) video.play();
+					animate();
+
+				} );
+
 				gui.open();
 
 			}
@@ -205,7 +239,14 @@
 
 			buildGui();
 
-			render();
+			animate();
+
+			function animate() {
+
+				if (spotLight.map && spotLight.map.isVideoTexture) requestAnimationFrame( animate );
+				render();
+
+			}
 
 		</script>
 
