--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -48,7 +48,7 @@
 
 					document.body.appendChild( WebGPU.getErrorMessage() );
 
-					throw 'No WebGPU support';
+					throw new Error( 'No WebGPU support' );
 
 				}
 
