--- a/examples/webgpu_skinning.html
+++ b/examples/webgpu_skinning.html
@@ -45,7 +45,7 @@
 
 					document.body.appendChild( WebGPU.getErrorMessage() );
 
-					throw 'No WebGPU support';
+					throw new Error( 'No WebGPU support' );
 
 				}
 
