--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Compute<br/>(Chrome Canary with flag: --enable-unsafe-webgpu)
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Compute
 		</div>
 
 		<script type="importmap">
