--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -46,6 +46,19 @@
 			}
 		}
 		</script>
+
+		<script type="module">
+
+			import ImportMaps from './jsm/capabilities/ImportMaps.js';
+
+			if ( ImportMaps.isAvailable() === false ) {
+
+				document.body.appendChild( ImportMaps.getErrorMessage() );
+
+			}
+
+		</script>
+
 		<script type="module">
 
 			import * as THREE from 'three';
