Examples: Clean up.

--- a/examples/webgl2_materials_texture3d.html
+++ b/examples/webgl2_materials_texture3d.html
@@ -20,7 +20,7 @@
 		import { OrbitControls } from './jsm/controls/OrbitControls.js';
 		import { NRRDLoader } from './jsm/loaders/NRRDLoader.js';
 		import { VolumeRenderShader1 } from './jsm/shaders/VolumeShader.js';
-		import { WEBGL } from './jsm/WebGL.js';
+		import { WEBGL } from './jsm/capabilities/WebGL.js';
 
 		if ( WEBGL.isWebGL2Available() === false ) {
 
