--- a/examples/webgl2_buffergeometry_attributes_integer.html
+++ b/examples/webgl2_buffergeometry_attributes_integer.html
@@ -48,7 +48,7 @@
 
 			import * as THREE from '../build/three.module.js';
 
-			import { WEBGL } from './jsm/WebGL.js';
+			import { WEBGL } from './jsm/capabilities/WebGL.js';
 
 			if ( WEBGL.isWebGL2Available() === false ) {
 
