--- a/examples/webgl2_materials_texture3d_partialupdate.html
+++ b/examples/webgl2_materials_texture3d_partialupdate.html
@@ -18,7 +18,7 @@
 			import { ImprovedNoise } from './jsm/math/ImprovedNoise.js';
 
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
-			import { WEBGL } from './jsm/WebGL.js';
+			import { WEBGL } from './jsm/capabilities/WebGL.js';
 
 			if ( WEBGL.isWebGL2Available() === false ) {
 
