--- a/examples/webgl2_rendertarget_texture2darray.html
+++ b/examples/webgl2_rendertarget_texture2darray.html
@@ -103,7 +103,7 @@
 			import { unzipSync } from './jsm/libs/fflate.module.js';
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
-			import { WEBGL } from './jsm/WebGL.js';
+			import { WEBGL } from './jsm/capabilities/WebGL.js';
 
 			if ( WEBGL.isWebGL2Available() === false ) {
 
