--- a/examples/webgl2_volume_instancing.html
+++ b/examples/webgl2_volume_instancing.html
@@ -17,7 +17,7 @@
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { VOXLoader, VOXDataTexture3D } from './jsm/loaders/VOXLoader.js';
 
-			import { WEBGL } from './jsm/WebGL.js';
+			import { WEBGL } from './jsm/capabilities/WebGL.js';
 
 			if ( WEBGL.isWebGL2Available() === false ) {
 
