--- a/examples/webgpu_skinning_points.html
+++ b/examples/webgpu_skinning_points.html
@@ -11,7 +11,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - WebGPU - Skinning Points
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Skinning Points
 		</div>
 
 		<script type="importmap">
@@ -40,8 +40,8 @@
 
 			import { FBXLoader } from './jsm/loaders/FBXLoader.js';
 
+			import WebGPU from './jsm/capabilities/WebGPU.js';
 			import WebGPURenderer from './jsm/renderers/webgpu/WebGPURenderer.js';
-			import WebGPU from './jsm/renderers/webgpu/WebGPU.js';
 
 			import * as Nodes from './jsm/renderers/nodes/Nodes.js';
 
