--- a/examples/webgpu_lights_selective.html
+++ b/examples/webgpu_lights_selective.html
@@ -15,24 +15,14 @@
 			<b style="color:red">Left: Red lights</b> - <b>Center: All lights</b> - <b style="color:blue">Right: blue light</b>
 		</div>
 
+		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
 		<script type="importmap">
 		{
 			"imports": {
 				"three": "../build/three.module.js"
 			}
 		}
-		</script>
-
-		<script type="module">
-
-			import ImportMaps from './jsm/capabilities/ImportMaps.js';
-
-			if ( ImportMaps.isAvailable() === false ) {
-
-				document.body.appendChild( ImportMaps.getErrorMessage() );
-
-			}
-
 		</script>
 
 		<script type="module">
