--- a/examples/webgpu_sandbox.html
+++ b/examples/webgpu_sandbox.html
@@ -12,24 +12,14 @@
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGPU - Sandbox
 		</div>
 
+		<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
 		<script type="importmap">
 		{
 			"imports": {
 				"three": "../build/three.module.js"
 			}
 		}
-		</script>
-
-		<script type="module">
-
-			import ImportMaps from './jsm/capabilities/ImportMaps.js';
-
-			if ( ImportMaps.isAvailable() === false ) {
-
-				document.body.appendChild( ImportMaps.getErrorMessage() );
-
-			}
-
 		</script>
 
 		<script type="module">
