--- a/examples/webgl_postprocessing_3dlut.html
+++ b/examples/webgl_postprocessing_3dlut.html
@@ -13,7 +13,7 @@
 			Battle Damaged Sci-fi Helmet by
 			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
 			<a href="https://hdrihaven.com/hdri/?h=royal_esplanade" target="_blank" rel="noopener">Royal Esplanade</a> by <a href="https://hdrihaven.com/" target="_blank" rel="noopener">HDRI Haven</a><br />
-			LUTs from <a href="https://www.rocketstock.com/free-after-effects-templates/35-free-luts-for-color-grading-videos/">RocketStock</a>
+			LUTs from <a href="https://www.rocketstock.com/free-after-effects-templates/35-free-luts-for-color-grading-videos/">RocketStock</a>, <a href="https://www.freepresets.com/product/free-luts-cinematic/">FreePresets.com</a>
 		</div>
 
 		<script type="module">
@@ -27,6 +27,7 @@
 			import { ShaderPass } from './jsm/postprocessing/ShaderPass.js';
 			import { LUTPass } from './jsm/postprocessing/LUTPass.js';
 			import { LUTCubeLoader } from './jsm/loaders/LUTCubeLoader.js';
+			import { LUT3dlLoader } from './jsm/loaders/LUT3dlLoader.js';
 			import { GammaCorrectionShader } from './jsm/shaders/GammaCorrectionShader.js';
 			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
@@ -43,6 +44,7 @@
 				'Clayton 33.CUBE': null,
 				'Cubicle 99.CUBE': null,
 				'Remy 24.CUBE': null,
+				'Presetpro-Cinematic.3dl': null
 			};
 
 			let gui;
@@ -84,12 +86,25 @@
 
 				Object.keys( lutMap ).forEach( name => {
 
-					new LUTCubeLoader()
-						.load( 'luts/' + name, function ( result ) {
+					if ( /\.CUBE$/i.test( name ) ) {
 
-							lutMap[ name ] = result;
+						new LUTCubeLoader()
+							.load( 'luts/' + name, function ( result ) {
 
-						} );
+								lutMap[ name ] = result;
+
+							} );
+
+					} else {
+
+						new LUT3dlLoader()
+							.load( 'luts/' + name, function ( result ) {
+
+								lutMap[ name ] = result;
+
+							} );
+
+					}
 
 				} );
 
