--- a/examples/webgl_portal.html
+++ b/examples/webgl_portal.html
@@ -88,22 +88,14 @@
 				topLeftCorner = new THREE.Vector3();
 				reflectedPosition = new THREE.Vector3();
 
-				leftPortalTexture = new THREE.WebGLRenderTarget( 256, 256, {
-					minFilter: THREE.LinearFilter,
-					magFilter: THREE.LinearFilter,
-					format: THREE.RGBFormat
-				} );
+				leftPortalTexture = new THREE.WebGLRenderTarget( 256, 256 );
 				leftPortal = new THREE.Mesh( planeGeo, new THREE.MeshBasicMaterial( { map: leftPortalTexture.texture } ) );
 				leftPortal.position.x = - 30;
 				leftPortal.position.y = 20;
 				leftPortal.scale.set( 0.35, 0.35, 0.35 );
 				scene.add( leftPortal );
 
-				rightPortalTexture = new THREE.WebGLRenderTarget( 256, 256, {
-					minFilter: THREE.LinearFilter,
-					magFilter: THREE.LinearFilter,
-					format: THREE.RGBFormat
-				} );
+				rightPortalTexture = new THREE.WebGLRenderTarget( 256, 256 );
 				rightPortal = new THREE.Mesh( planeGeo, new THREE.MeshBasicMaterial( { map: rightPortalTexture.texture } ) );
 				rightPortal.position.x = 30;
 				rightPortal.position.y = 20;
