--- a/examples/webgl_lightprobe_cubecamera.html
+++ b/examples/webgl_lightprobe_cubecamera.html
@@ -42,9 +42,7 @@
 				camera = new THREE.PerspectiveCamera( 40, window.innerWidth / window.innerHeight, 1, 1000 );
 				camera.position.set( 0, 0, 30 );
 
-				const cubeRenderTarget = new THREE.WebGLCubeRenderTarget( 256, {
-					format: THREE.RGBAFormat
-				} );
+				const cubeRenderTarget = new THREE.WebGLCubeRenderTarget( 256 );
 
 				cubeCamera = new THREE.CubeCamera( 1, 1000, cubeRenderTarget );
 
