Examples: Added import map polyfill to webgl_materials_nodes_playground.

--- a/examples/webgl_materials_nodes_playground.html
+++ b/examples/webgl_materials_nodes_playground.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+	<head>
 		<title>three.js webgl - node-editor playground</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" href="fonts/open-sans/open-sans.css" type="text/css"/>
 		<link rel="stylesheet" href="fonts/tabler-icons/tabler-icons.min.css" type="text/css"/>
 		<link type="text/css" rel="stylesheet" href="main.css">
-  </head>
-  <body>
+	</head>
+	<body>
+	<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 	<script type="importmap">
 	{
 		"imports": {
@@ -181,5 +182,5 @@
 
 	</script>
 
-  </body>
+	</body>
 </html>
