Examples: Fixed alpha: true breakage.

--- a/examples/misc_controls_arcball.html
+++ b/examples/misc_controls_arcball.html
@@ -85,7 +85,8 @@
 				const container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
-				renderer = new THREE.WebGLRenderer( { antialias: true, alpha: true } );
+				renderer = new THREE.WebGLRenderer( { antialias: true } );
+				renderer.setClearAlpha( 0 );
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
