Revert "Examples: Fixed alpha: true breakage."
This reverts commit 05471ee22650386c06fc8b210b9088cec203d0b0.

--- a/examples/webgl_materials_blending_custom.html
+++ b/examples/webgl_materials_blending_custom.html
@@ -298,10 +298,7 @@
 
 				// RENDERER
 
-				const canvas = document.createElement( 'canvas' );
-				const context = canvas.getContext( 'webgl', { alpha: false } ); // TODO Fix this workaround
-
-				renderer = new THREE.WebGLRenderer( { canvas: canvas, context: context } );
+				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 
