Examples: Fixed webgl_shadow_contact.

--- a/examples/webgl_shadow_contact.html
+++ b/examples/webgl_shadow_contact.html
@@ -288,6 +288,10 @@
 				cameraHelper.visible = false;
 				scene.overrideMaterial = depthMaterial;
 
+				// set renderer clear alpha
+				const initialClearAlpha = renderer.getClearAlpha();
+				renderer.setClearAlpha( 0 );
+
 				// render to the render target to get the depths
 				renderer.setRenderTarget( renderTarget );
 				renderer.render( scene, shadowCamera );
@@ -304,6 +308,7 @@
 
 				// reset and render the normal scene
 				renderer.setRenderTarget( null );
+				renderer.setClearAlpha( initialClearAlpha );
 				scene.background = initialBackground;
 
 				renderer.render( scene, camera );
