--- a/examples/webgl_buffergeometry_custom_attributes_particles.html
+++ b/examples/webgl_buffergeometry_custom_attributes_particles.html
@@ -51,8 +51,10 @@
 			import * as THREE from '../build/three.module.js';
 
 			import Stats from './jsm/libs/stats.module.js';
+			
+			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 
-			let renderer, scene, camera, stats;
+			let renderer, scene, camera, controls, stats;
 
 			let particleSystem, uniforms, geometry;
 
@@ -126,6 +128,8 @@
 
 				const container = document.getElementById( 'container' );
 				container.appendChild( renderer.domElement );
+				
+				controls = new OrbitControls( camera, container );
 
 				stats = new Stats();
 				container.appendChild( stats.dom );
@@ -171,6 +175,8 @@
 				geometry.attributes.size.needsUpdate = true;
 
 				renderer.render( scene, camera );
+				
+				controls.update();
 
 			}
 
