Examples: Use WebGL 2 in blending demo.

--- a/examples/webgl_materials_blending.html
+++ b/examples/webgl_materials_blending.html
@@ -114,7 +114,7 @@
 				}
 
 				const canvas = document.createElement( 'canvas' );
-				const context = canvas.getContext( 'webgl', { alpha: false } ); // TODO Remove workaround
+				const context = canvas.getContext( 'webgl2', { alpha: false } ); // TODO Remove workaround
 
 				// RENDERER
 
