--- a/examples/webgl_materials_blending_custom.html
+++ b/examples/webgl_materials_blending_custom.html
@@ -299,7 +299,7 @@
 				// RENDERER
 
 				const canvas = document.createElement( 'canvas' );
-				const context = canvas.getContext( 'webgl', { alpha: false } ); // TODO Remove workaround
+				const context = canvas.getContext( 'webgl2', { alpha: false } ); // TODO Remove workaround
 
 				renderer = new THREE.WebGLRenderer( { canvas: canvas, context: context } );
 				renderer.setPixelRatio( window.devicePixelRatio );
