Log error in ldraw example

--- a/examples/webgl_loader_ldraw.html
+++ b/examples/webgl_loader_ldraw.html
@@ -334,11 +334,12 @@
 
 			}
 
-			function onError() {
+			function onError( error ) {
 
 				const message = 'Error loading model';
 				progressBarDiv.innerText = message;
 				console.log( message );
+				console.error( error );
 
 			}
 
