OrbitControls.js: add zooming with mouse follow

--- a/examples/misc_controls_orbit.html
+++ b/examples/misc_controls_orbit.html
@@ -65,6 +65,8 @@
 
 				controls.maxPolarAngle = Math.PI / 2;
 
+				controls.enableFollowZoom = true;
+
 				// world
 
 				const geometry = new THREE.CylinderGeometry( 0, 10, 30, 4, 1 );
