--- a/examples/webgl_animation_skinning_blending.html
+++ b/examples/webgl_animation_skinning_blending.html
@@ -88,7 +88,7 @@
 
 					model.traverse( function ( object ) {
 
-						if ( object.isMesh ) object.castShadow = true;
+						if ( object instanceof THREE.Mesh && object.isMesh ) object.castShadow = true;
 
 					} );
 
