NodeEditor: Node-based for native objects (#23165)
* update lib

* Create BaseNode.js

* NodeEditor r3

* update examples

* fix autoComplete click

* fix output length

* fix duplicated Operator in menus

* semicolon

* Update webgl_materials_nodes_playground.html

* rename example: webgl_materials_nodes_playground -> webgl_nodes_playground

* fix vector length input and add .getVectorLength() method

* add Split and Join NodeEditor

--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -58,6 +58,7 @@
 
 			import { NodeEditor } from './jsm/node-editor/NodeEditor.js';
 			import { StandardMaterialEditor } from './jsm/node-editor/materials/StandardMaterialEditor.js';
+			import { MeshEditor } from './jsm/node-editor/scene/MeshEditor.js';
 
 			import * as Nodes from './jsm/renderers/nodes/Nodes.js';
 
@@ -130,27 +131,28 @@
 
 			function initEditor() {
 
-				const nodeEditor = new NodeEditor();
+				const nodeEditor = new NodeEditor( scene );
 
 				nodeEditor.addEventListener( 'new', () => {
 
-					const materialEditor = new StandardMaterialEditor();
-					materialEditor.setPosition( ( window.innerWidth / 2 ) - 150, 100 );
+					const materialEditor = new MeshEditor( model );
 
 					nodeEditor.add( materialEditor );
-
-					model.material = materialEditor.material;
-					model.material.lightNode = nodeLights;
+					nodeEditor.centralizeNode( materialEditor );
 
 				} );
 
-				nodeEditor.addEventListener( 'load', () => {
+				nodeEditor.addEventListener( 'add', ( e ) => {
 
-					const materialEditor = nodeEditor.nodes[ 0 ];
-					materialEditor.update(); // need move to deserialization
+					const node = e.node;
 
-					model.material = materialEditor.material;
-					model.material.lightNode = nodeLights;
+					if ( node.value !== null && node.value.isMaterial === true ) {
+
+						const material = node.value;
+
+						material.lightNode = nodeLights;
+
+					}
 
 				} );
 
@@ -159,17 +161,29 @@
 				const loaderFBX = new FBXLoader();
 				loaderFBX.load( 'models/fbx/stanford-bunny.fbx', ( object ) => {
 
-					const materialEditor = new StandardMaterialEditor();
-					materialEditor.setPosition( ( window.innerWidth / 2 ) - 150, 100 ); // canvas position
+					const defaultMaterial = new Nodes.MeshBasicNodeMaterial();
+					defaultMaterial.colorNode = new Nodes.FloatNode( 0 );
 
-					nodeEditor.add( materialEditor );
+					const sphere = new THREE.Mesh( new THREE.SphereGeometry( 200, 32, 16 ), defaultMaterial  ) ;
+					sphere.name = 'Sphere';
+					sphere.position.set( 500, 0, -500 );
+					scene.add( sphere );
+
+					const box = new THREE.Mesh( new THREE.BoxGeometry( 200, 200, 200 ), defaultMaterial  ) ;
+					box.name = 'Box';
+					box.position.set( -500, 0, -500 );
+					scene.add( box );
 
 					model = object.children[ 0 ];
 					model.position.set( 0, 0, 10 );
 					model.scale.setScalar( 1 );
-					model.material = materialEditor.material;
-					model.material.lightNode = nodeLights;
+					model.material = defaultMaterial;
 					scene.add( model );
+
+					const materialEditor = new MeshEditor( model );
+
+					nodeEditor.add( materialEditor );
+					nodeEditor.centralizeNode( materialEditor );
 
 				} );
 
