--- a/examples/webgl_materials_blending.html
+++ b/examples/webgl_materials_blending.html
@@ -33,9 +33,9 @@
 
 				// BACKGROUND
 
-				const canvasBackground = document.createElement( 'canvas' );
-				const ctx = canvasBackground.getContext( '2d' );
-				canvasBackground.width = canvasBackground.height = 128;
+				const canvas = document.createElement( 'canvas' );
+				const ctx = canvas.getContext( '2d' );
+				canvas.width = canvas.height = 128;
 				ctx.fillStyle = '#ddd';
 				ctx.fillRect( 0, 0, 128, 128 );
 				ctx.fillStyle = '#555';
@@ -47,21 +47,11 @@
 				ctx.fillStyle = '#777';
 				ctx.fillRect( 96, 96, 32, 32 );
 
-				mapBg = new THREE.CanvasTexture( canvasBackground );
+				mapBg = new THREE.CanvasTexture( canvas );
 				mapBg.wrapS = mapBg.wrapT = THREE.RepeatWrapping;
-				mapBg.repeat.set( 128, 64 );
+				mapBg.repeat.set( 64, 32 );
 
-				/*
-				let mapBg = textureLoader.load( 'textures/disturb.jpg' );
-				mapBg.wrapS = mapBg.wrapT = THREE.RepeatWrapping;
-				mapBg.repeat.set( 8, 4 );
-				*/
-
-				const materialBg = new THREE.MeshBasicMaterial( { map: mapBg } );
-
-				const meshBg = new THREE.Mesh( new THREE.PlaneGeometry( 4000, 2000 ), materialBg );
-				meshBg.position.set( 0, 0, - 1 );
-				scene.add( meshBg );
+				scene.background = mapBg;
 
 				// OBJECTS
 
@@ -113,12 +103,9 @@
 
 				}
 
-				const canvas = document.createElement( 'canvas' );
-				const context = canvas.getContext( 'webgl2', { alpha: false } ); // TODO Remove workaround
-
 				// RENDERER
 
-				renderer = new THREE.WebGLRenderer( { canvas: canvas, context: context } );
+				renderer = new THREE.WebGLRenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				document.body.appendChild( renderer.domElement );
