Revert "force refresh material uniforms using .uniformsNeedUpdate"
This reverts commit b083fb44296941b0724ef3529bdcfa30b9dbda53.

--- a/examples/webgl_materials_instance_uniform_nodes.html
+++ b/examples/webgl_materials_instance_uniform_nodes.html
@@ -54,6 +54,9 @@
 
 					this.inputNode.value.copy( meshColor );
 
+					// force refresh material uniforms
+					rendererState.useProgram( null );
+
 				}
 
 				generate( builder, output ) {
