--- a/examples/misc_controls_orbit.html
+++ b/examples/misc_controls_orbit.html
@@ -128,7 +128,7 @@
 
 				requestAnimationFrame( animate );
 
-				controls.update(); // only required if controls.enableDamping = true, or if controls.autoRotate = true, or if controls.zoomToCursor = true;
+				controls.update(); // only required if controls.enableDamping = true, or if controls.autoRotate = true
 
 				render();
 
