--- a/examples/webgpu_nodes_playground.html
+++ b/examples/webgpu_nodes_playground.html
@@ -174,6 +174,14 @@
 					box.position.set( -500, 0, -500 );
 					scene.add( box );
 
+					const defaultPointsMaterial = new Nodes.PointsNodeMaterial();
+					defaultPointsMaterial.colorNode = new Nodes.FloatNode( 0 );
+
+					const torusKnot = new THREE.Points( new THREE.TorusKnotGeometry( 100, 30, 100, 16 ), defaultPointsMaterial ) ;
+					torusKnot.name = 'Torus Knot ( Points )';
+					torusKnot.position.set( 0, 0, -500 );
+					scene.add( torusKnot );
+
 					model = object.children[ 0 ];
 					model.position.set( 0, 0, 10 );
 					model.scale.setScalar( 1 );
