Manual: Don't use GammaEncoding.

--- a/manual/examples/background-v01.html
+++ b/manual/examples/background-v01.html
@@ -51,7 +51,7 @@ function main() {
     controls.update();
   }
 
-  renderer.outputEncoding = THREE.GammaEncoding;
+  renderer.outputEncoding = THREE.sRGBEncoding;
   renderer.shadowMap.enabled = true;
 
   const hemiLight = new THREE.HemisphereLight(0xffffff, 0xffffff, 0.6);
